# typephp

./: .gitignore  CMakeLists.txt  CNAME  Cargo.toml  Makefile  Makefile.copy  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: helpers.cpp  helpers.h  main  main.cpp  main.rs  parser.y  token.l  tokens.l  version.h  version.h.ini
tests/: composer.json  hello.php  test_var.php  test_var.txt
tests/lex/: Makefile  test.php  token.l
tests/llvm/: Makefile  README.md  hello.c
